# artificial-intelligence-class-assignments

agent-programming/miners/: miners.mas2j
agent-programming/miners/src/asl/: builder.asl  col.asl
agent-programming/miners/src/java/env/: Site.java  planetEnv.java
agent-programming/report/: main.tex
fuzzy/report/: main.tex
fuzzy/truck-driver/remoteDriverManual/: .classpath
fuzzy/truck-driver/remoteDriverManual/src/: driver.fcl
fuzzy/truck-driver/remoteDriverManual/src/remoteDriver/: RemoteDriver.java
machine-learning/fashion-mnis/: pyproject.toml
machine-learning/fashion-mnis/fashion_mnis/: __init__.py
machine-learning/fashion-mnis/tests/: test_fashion_mnis.py
